<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.es4j</groupId>
    <artifactId>es4j</artifactId>
    <version>${revision}</version>
  </parent>

  <packaging>pom</packaging>
  <artifactId>es4j-stack</artifactId>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <netty-transport-native-epoll.version>4.1.85.Final</netty-transport-native-epoll.version>
    <base.image>eclipse-temurin:17-jre-alpine@sha256:dd8238c151293ae6a7c22898ef2f0df2af8a05786aef73ccd3248e73765969ed
    </base.image>
    <docker.image.name>account-portfolio</docker.image.name>
    <main.verticle>io.es4j.launcher.Es4jMain</main.verticle>
    <launcher.class>io.es4j.launcher.Es4jLauncher</launcher.class>
    <jib-maven-plugin.version>3.3.2</jib-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!--      Event.x Framework -->
      <dependency>
        <groupId>io.es4j</groupId>
        <artifactId>es4j-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.es4j</groupId>
        <artifactId>es4j-test</artifactId>
        <scope>test</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.es4j</groupId>
        <artifactId>es4j-postgres-storage</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.es4j</groupId>
        <artifactId>es4j-http-bridge</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.es4j</groupId>
        <artifactId>es4j-http-client</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-io_uring-incubator</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-transport-native-epoll</artifactId>
        <classifier>linux-x86_64</classifier>
        <version>${netty-transport-native-epoll.version}</version>
      </dependency>
      <!--      -->
    </dependencies>
  </dependencyManagement>


  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>smallrye-open-api-maven-plugin</artifactId>
          <executions>
            <execution>
              <goals>
                <goal>generate-schema</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.google.cloud.tools</groupId>
          <artifactId>jib-maven-plugin</artifactId>
          <version>${jib-maven-plugin.version}</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>dockerBuild</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <from>
              <image>${base.image}</image>
            </from>
            <to>
              <image>${docker.image.name}</image>
              <tags>
                <tag>latest</tag>
              </tags>
            </to>
            <container>
              <extraClasspath>/aggregates/*</extraClasspath>
              <mainClass>${launcher.class}</mainClass>
              <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
              <jvmFlags>
                <jvmFlag>-XX:+UseZGC</jvmFlag>
              </jvmFlags>
              <args>
                <arg>run</arg>
                <arg>${main.verticle}</arg>
              </args>
              <ports>
                <port>8080</port>
              </ports>
            </container>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
